infrastructure/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: eg-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: eg-internal-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-internal
  annotations:
    cert-manager.io/cluster-issuer: "custom-ca-issuer"
spec:
  gatewayClassName: eg-internal
  listeners:
    - name: internal
      hostname: "*.kvlk.local"
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: kvlk-local-tls
            kind: Secret
            group: ""
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: uptime
      hostname: "uptime.kvlk.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloudflare-tls
            kind: Secret
            group: ""
    - name: rustfs
      hostname: "rustfs.kvlk.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloudflare-tls
            kind: Secret
            group: ""
    - name: websocket-dc
      hostname: "websocket-dc.kvlk.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloudflare-tls
            kind: Secret
            group: ""
    - name: zot
      hostname: "registry.kvlk.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: zot-tls
            kind: Secret
            group: ""
            namespace: zot
    - name: kalandozas
      hostname: "kalandozas.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: kalandozas-tls
            kind: Secret
            group: ""
            namespace: kalandozas
    - name: kalandozas-admin
      hostname: "admin.kalandozas.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: kalandozas-admin-tls
            kind: Secret
            group: ""
            namespace: kalandozas-admin
    # - name: contibus
    #   hostname: "contibus.hu"
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: contibus-tls
    #         kind: Secret
    #         group: ""
    #         namespace: contibus
    - name: contibus
      hostname: "contibus.hu"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
      # tls:
      #   mode: Terminate
      #   certificateRefs:
      #     - name: contibus-tls
      #       kind: Secret
      #       group: ""
      #       namespace: contibus
    - name: contitrans
      hostname: "neoline-contitrans.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: contitrans-tls
            kind: Secret
            group: ""
            namespace: contitrans
    - name: keycloak
      hostname: "keycloak.kvlk.hu"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: cloudflare-tls
            kind: Secret
            group: ""
    - name: http-redirect
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
spec:
  parentRefs:
    - name: eg
      sectionName: http-redirect
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Content-Type
                value: text/plain
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
