infrastructure/envoy/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-clients-internal
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: eg-internal
      app.kubernetes.io/name: envoy
  ingress:
    - fromEndpoints:
        - matchLabels:
            svccontroller.k3s.cattle.io/svcname: envoy-envoy-gateway-system-eg-internal-9fd0ad6d
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-clients-public
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: eg
      app.kubernetes.io/name: envoy
  ingress:
    - fromEndpoints:
        - matchLabels:
            svccontroller.k3s.cattle.io/svcname: envoy-envoy-gateway-system-eg-5391c79d
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
            - port: "10080"
              protocol: TCP
